Create header styling and adjust footer styling

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
             <div class="hero">
                 <div class="header">
                     <p class="logo">Header Logo</p>
-                    <a class="header-link">header link one</a>
-                    <a class="header-link">header link two</a>
-                    <a class="header-link">header link three</a>
+                    <div class="links">
+                        <a class="header-link">header link one</a>
+                        <a class="header-link">header link two</a>
+                        <a class="header-link">header link three</a>
+                    </div>
                 </div>
                 <div class="chunk">
                     <div class="blurb">
