Create hero styling

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <button class="sign-up-button">Sign up</button>
 
                     </div>
-                    <img src="" alt="this a placeholder for an image">
+                    <img src="bear-sculpture.jpeg" alt="shiny mirror sculpture of a bear covered in snow, in front of mountain scenery">
                 </div>
 
             </div>
