Create info styling

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
                 <div class="facts">
                     <div class="fact">
                         <img src="" alt="image 1">
-                        <p class="description">this is some subtest under an illustration or image.</p>
+                        <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                     <div class="fact">
                         <img src="" alt="image 2">
-                        <p class="description">this is some subtest under an illustration or image.</p>
+                        <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                     <div class="fact">
                         <img src="" alt="image 3">
-                        <p class="description">this is some subtest under an illustration or image.</p>
+                        <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                     <div class="fact">
                         <img src="" alt="image 4">
-                        <p class="description">this is some subtest under an illustration or image.</p>
+                        <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                 </div>
 
