--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             </div>
             <div class="quote">
-                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling uyp space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+                <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p class="byline">-Thor, God of Thunder</p>
             </div>
             <div class="singup">
