Create signup styling and fix related typos in html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
                 <p class="byline">-Thor, God of Thunder</p>
             </div>
-            <div class="singup">
+            <div class="signup">
                 <div class="message">
                     <h1 class="alert">Call to action! It's time!</h1>
                     <p class="notice">Sign up for our product by clicking that button right over there!</p>
