Polish up styling and make css more readable

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
                 <div class="header">
                     <p class="logo">Header Logo</p>
                     <div class="links">
-                        <a class="header-link">header link one</a>
-                        <a class="header-link">header link two</a>
-                        <a class="header-link">header link three</a>
+                        <a class="header-link" href="">header link one</a>
+                        <a class="header-link" href="">header link two</a>
+                        <a class="header-link" href="">header link three</a>
                     </div>
                 </div>
                 <div class="chunk">
@@ -23,7 +23,7 @@
                         <button class="sign-up-button">Sign up</button>
 
                     </div>
-                    <img src="bear-sculpture.jpeg" alt="shiny mirror sculpture of a bear covered in snow, in front of mountain scenery">
+                    <img src="img/bear-sculpture.jpeg" alt="shiny mirror sculpture of a bear covered in snow, in front of mountain scenery">
                 </div>
 
             </div>
@@ -31,19 +31,19 @@
                 <h1 class="info-title">Some random information.</h1>
                 <div class="facts">
                     <div class="fact">
-                        <img src="" alt="image 1">
+                        <img src="img/lanterns.jpeg" alt="many paper lanterns floating above a mirror">
                         <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                     <div class="fact">
-                        <img src="" alt="image 2">
+                        <img src="img/lanterns.jpeg" alt="many paper lanterns floating above a mirror">
                         <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                     <div class="fact">
-                        <img src="" alt="image 3">
+                        <img src="img/lanterns.jpeg" alt="many paper lanterns floating above a mirror">
                         <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                     <div class="fact">
-                        <img src="" alt="image 4">
+                        <img src="img/lanterns.jpeg" alt="many paper lanterns floating above a mirror">
                         <p class="description">this is some subtext under an illustration or image.</p>
                     </div>
                 </div>
